# genpass

./: .clangd  .gitignore  CMakeLists.txt  Makefile  MakefileCustom  README.md  generator.cpp  generator.hpp  genpass.sln  genpass.vcxproj  genpass.vcxproj.filters  main.cpp  parser.cpp  password.hpp
.serena/: .gitignore  project.yml
app/: CMakeLists.txt  main.cpp
configured/: config.hpp.in
gui/: AppIcon.ppm  CMakeLists.txt  app_icon_xpm.hpp  gui_app.cpp  main_frame.cpp  main_frame.hpp
gui/macos/: make_icns.sh
man/: genpass.1
scripts/: build-deb.sh
src/: CMakeLists.txt
src/genlib/: CMakeLists.txt  generator.cpp  generator.hpp  parser.cpp  parser.hpp  password.hpp  randomer.cpp  randomer.hpp
